Fix: User Pages (Beta!)
Changelog:
- audio player is now more colorful!
- user pages now display tracks uploaded by the user who's profile is being viewed (WIP backend updates)
- cookie banner is more detailed (why wasn't it `flex`ed before?)
- player has a more *interesting?* interface (also uses some slightly more advanced CSS for the Mobile version)
- profile image on profile pages no longer overlaps the header (why'd that happen anyways?)
- removed some unused CSS id's/classes
- as always, `server.js` has been updated to match these changes

TO-DO:
- custom audio player
- make API public (and work better, needs a lot of patching)
- playlists (yes, seriously)
- (not sure 'bout this one) move track URL's to /userID/trackID

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,8 +29,13 @@ audio {
     height: calc(100% + 4px);
     left: -2px;
     top: -2px;
-    background: linear-gradient(to left, #2600ff, #ff0000);
+    background: linear-gradient(to top left, #5F2879, #00418D, #00C2DE, #00BA71, #FAD717, #FA8901, #F43545);
     z-index: -1;
+}
+
+#audio-player-container audio {
+  position: absolute;
+  bottom: 0;
 }
 
 #current-song {
@@ -42,6 +47,30 @@ audio {
     font-size: 28px;
     background: black;
     color: white;
+    border-top-color: white;
+    border-top-style: double;
+    border-top-width: 2px;
+    border-bottom-style: none;
+    border-right-color: white;
+    border-right-style: solid;
+    border-right-width: 2px;
+    border-left-color: white;
+    border-left-style: dashed;
+    border-left-width: 2px;
+    
+}
+/* mobile resize */
+@media screen and (max-width: 991px){
+  #current-song {
+    position: absolute !important;
+    top: -10px !important;
+    right: -2px !important;
+    padding: 0 5px;
+    margin: 0;
+    font-size: 18px;
+    background: black;
+    color: white;
+  }
 }
 
 .header-01oozD {
@@ -72,7 +101,7 @@ audio {
 }
 
 .header-V8Sgnz {
-  z-index:9998
+  z-index: 9998 !important;
 }
 
 .logo {
@@ -123,12 +152,7 @@ audio {
   overflow: visible;
 }
 
-.sad-left {
-  height: 250px;
-  overflow: visible;
-}
-
-.sad-right {
+.sad-le {
   height: 250px;
   overflow: visible;
 }
@@ -191,6 +215,7 @@ audio {
   align-items: center;
   -moz-box-pack: center;
   justify-content: center;
+  margin-top: 8px;
 }
 
 .track-name {
@@ -216,7 +241,7 @@ audio {
 }
 
 .outterProImg {
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: 0;
 }
